package Airship;

import General.AnimatedThing;
import Quarter.Quarter;

public class ManOWar {


    public ManOWar(String name) {    }

    AnimatedThing image = new AnimatedThing("Man'o'war.png",150, 25, 2574, 2480, 4, 831, 800);

    public AnimatedThing getImage() {
        return image;
    }
}
