package Quarter;

import Quarter.Quarter;

public abstract class SpecialQuarter extends Quarter {

}
