@startuml

title __MANAGEMENT's Class Diagram__\n

  namespace  {
    namespace Airship {
      abstract class Management.GeneralManagement.Airship {
      }
    }
  }
  

  namespace  {
    namespace Airship {
      class Airship.ManOWar {
      }
    }
  }
  

  namespace  {
    namespace Management.GeneralManagement {
      class Management.GeneralManagement.AnimatedThing {
      }
    }
  }
  

  namespace Management.GeneralManagement {
    namespace Management.GeneralManagement {
      class Management.GeneralManagement.Gamescene {
      }
    }
  }
  

  namespace  {
    namespace eneral {
      class Management.GeneralManagement.GlobalRessourcesManager {
      }
    }
  }
  

  namespace  {
    namespace eneral {
      class Management.GeneralManagement.LocalRessourcesManager {
      }
    }
  }
  

  namespace  {
    namespace eneral {
      class Management.GeneralManagement.Ressources {
      }
    }
  }
  

  namespace  {
    namespace eneral {
      class Management.GeneralManagement.NonAnimatedThing {
      }
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    namespace uarter {
      namespace ProductionQuarter {
        class Management.Quarter.ProductionQuarter.Berth {
        }
      }
    }
  }
  

  namespace  {
    namespace uarter {
      namespace ProductionQuarter {
        class Management.Quarter.ProductionQuarter.Birderman {
        }
      }
    }
  }
  

  namespace  {
    namespace uarter {
      namespace ProductionQuarter {
        class Management.Quarter.ProductionQuarter.CryptoMine {
        }
      }
    }
  }
  

  namespace  {
    namespace uarter {
      namespace ProductionQuarter {
        class Management.Quarter.ProductionQuarter.Cryptoinvestor {
        }
      }
    }
  }
  

  namespace  {
    namespace uarter {
      namespace ProductionQuarter {
        class Management.Quarter.ProductionQuarter.DataCenter {
        }
      }
    }
  }
  



  namespace  {
    namespace uarter {
      namespace ProductionQuarter {
        class Management.Quarter.ProductionQuarter.DimensionlessSpace {
        }
      }
    }
  }
  

  namespace  {
    namespace uarter {
      namespace ProductionQuarter {
        class Management.Quarter.ProductionQuarter.Galley {
        }
      }
    }
  }
  

  namespace  {
    namespace uarter {
      namespace ProductionQuarter {
        class Management.Quarter.ProductionQuarter.HellishBoss {
        }
      }
    }
  }
  

  namespace  {
    namespace uarter {
      namespace ProductionQuarter {
        class Management.Quarter.ProductionQuarter.IASynthetisTank {
        }
      }
    }
  }
  

  namespace  {
    namespace uarter {
      namespace ProductionQuarter {
        class Management.Quarter.ProductionQuarter.ParadoxalGenerator {
        }
      }
    }
  }
  

  namespace  {
    namespace uarter {
      namespace ProductionQuarter {
        abstract class Management.Quarter.ProductionQuarter.ProductionQuarter {
        }
      }
    }
  }
  

  namespace  {
    namespace uarter {
      namespace ProductionQuarter {
        class Management.Quarter.ProductionQuarter.ProgrammersOffice {
        }
      }
    }
  }
  

  namespace  {
    namespace uarter {
      namespace ProductionQuarter {
        class Management.Quarter.ProductionQuarter.TemporalCaboose {
        }
      }
    }
  }
  

  namespace  {
    namespace uarter {
      namespace ProductionQuarter {
        class Management.Quarter.ProductionQuarter.VirtualQuantumComputer {
        }
      }
    }
  }
  

  namespace  {
    namespace uarter {
      abstract class Management.Quarter.Management.Quarter {
      }
    }
  }
  

  namespace  {
    namespace uarter {
      abstract class Management.Quarter.SpecialQuarter {
      }
    }
  }
  

  Airship.ManOWar -up-|> Management.GeneralManagement.Airship
  Airship.ManOWar o-- Management.GeneralManagement.AnimatedThing : image
  Management.GeneralManagement.AnimatedThing -up-|> Management.GeneralManagement.NonAnimatedThing
  Management.GeneralManagement.Gamescene -up-|> javafx.scene.Scene
  Management.GeneralManagement.Gamescene o-- Airship.ManOWar : ManOWar1
  Management.GeneralManagement.Gamescene o-- Management.GeneralManagement.NonAnimatedThing : backgroundLeft
  Management.GeneralManagement.Gamescene o-- Management.GeneralManagement.NonAnimatedThing : backgroundRight
  Management.GeneralManagement.Gamescene o-- Management.GeneralManagement.NonAnimatedThing : cloudBottom1Left
  Management.GeneralManagement.Gamescene o-- Management.GeneralManagement.NonAnimatedThing : cloudBottom1Right
  Management.GeneralManagement.Gamescene o-- Management.GeneralManagement.NonAnimatedThing : cloudBottom2Left
  Management.GeneralManagement.Gamescene o-- Management.GeneralManagement.NonAnimatedThing : cloudBottom2Right
  Management.GeneralManagement.Gamescene o-- Management.GeneralManagement.NonAnimatedThing : cloudTop1Left
  Management.GeneralManagement.Gamescene o-- Management.GeneralManagement.NonAnimatedThing : cloudTop1Right
  Management.GeneralManagement.Gamescene o-- Management.GeneralManagement.NonAnimatedThing : cloudTop2Left
  Management.GeneralManagement.Gamescene o-- Management.GeneralManagement.NonAnimatedThing : cloudTop2Right
  Management.GeneralManagement.Gamescene o-- Management.Quarter.Management.Quarter : constructionSelected
  Management.GeneralManagement.Gamescene o-- Management.GeneralManagement.NonAnimatedThing : starsFix
  Management.GeneralManagement.GlobalRessourcesManager o-- Management.GeneralManagement.Ressources : bits
  Management.GeneralManagement.GlobalRessourcesManager o-- Management.GeneralManagement.Ressources : codeData
  Management.GeneralManagement.GlobalRessourcesManager o-- Management.GeneralManagement.Ressources : cryptoMoney
  Management.GeneralManagement.GlobalRessourcesManager o-- Management.GeneralManagement.Ressources : science
  Management.GeneralManagement.LocalRessourcesManager o-- Management.GeneralManagement.Ressources : crew
  Management.GeneralManagement.LocalRessourcesManager o-- Management.GeneralManagement.Ressources : elecricity
  Management.GeneralManagement.LocalRessourcesManager o-- Management.GeneralManagement.Ressources : food
  Main -up-|> javafx.application.Application
  Management.Quarter.ProductionQuarter.CryptoMine -up-|> Management.Quarter.ProductionQuarter.ProductionQuarter
  Management.Quarter.ProductionQuarter.DimensionlessSpace -up-|> Management.Quarter.ProductionQuarter.ProductionQuarter
  Management.Quarter.ProductionQuarter.IASynthetisTank -up-|> Management.Quarter.ProductionQuarter.ProductionQuarter
  Management.Quarter.ProductionQuarter.ParadoxalGenerator -up-|> Management.Quarter.ProductionQuarter.ProductionQuarter
  Management.Quarter.ProductionQuarter.ProductionQuarter -up-|> Management.Quarter.Management.Quarter
  Management.Quarter.ProductionQuarter.ProgrammersOffice -up-|> Management.Quarter.ProductionQuarter.ProductionQuarter
  Management.Quarter.ProductionQuarter.TemporalCaboose -up-|> Management.Quarter.ProductionQuarter.ProductionQuarter
  Management.Quarter.SpecialQuarter -up-|> Management.Quarter.Management.Quarter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
